--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -13,18 +13,16 @@
   <% end %>
 
   <div class="form-group">
-    
       <%= f.label :ci, class: "col-sm-2 control-label" do %>
         C. I. Nº
         <span class="required">*</span>
       <% end %>
       <div class="col-sm-10">
         <%= f.number_field :ci, class: "form-control" %>
-      </div>
-    
+      </div>  
   </div>
+  
   <div class="form-group">
-    
       <%= f.label :nombre, class: "col-sm-2 control-label" do %>
         Nombre
         <span class="required">*</span>
@@ -32,10 +30,9 @@
       <div class="col-sm-10">
         <%= f.text_field :nombre, class: "form-control" %>
       </div>
-    
   </div>
+  
   <div class="form-group">
-    
       <%= f.label :direccion, class: "col-sm-2 control-label" do %>
         Dirección
         <span class="required">*</span>
@@ -43,42 +40,37 @@
       <div class="col-sm-10">
         <%= f.text_field :direccion, class: "form-control" %>
       </div>
-    
   </div>
+  
   <div class="form-group">
-    
       <%= f.label :telefono, "Teléfono", class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
         <%= f.text_field :telefono, class: "form-control" %>
       </div>
-    
   </div>
+  
   <div class="form-group">
-    
       <%= f.label :fecha_contrato, "Fecha de contrato", class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
         <%= f.date_select :fecha_contrato, class: "form-control" %>
       </div>
-    
   </div>
+  
   <div class="form-group">
-    
       <%= f.label :fecha_conexion, "Fecha de conexión", class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
         <%= f.date_select :fecha_conexion, class: "form-control" %>
       </div>
-    
   </div>
+  
   <div class="form-group">
-    
       <%= f.label :observacion, "Observación", class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
         <%= f.text_field :observacion, class: "form-control" %>
       </div>
-    
   </div>
+  
   <div class="form-group">
-    
       <div class="col-sm-offset-2 col-sm-10"> 
         <div class="checkbox">
           <label>
@@ -87,7 +79,13 @@
           </label>
         </div>
       </div>
-    
+  </div>
+
+  <div class="form-group">
+      <%= f.label :medidor_id, "Medidor", class: "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.collection_select :medidor_id, @medidors, :id, :numero %>
+      </div>
   </div>
 
   <div class="form-group">
