--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -15,6 +15,7 @@
         <th>Dirección</th>
         <th>Teléfono</th>
         <th>Estado de cuenta</th>
+        <th>Medidor</th>
         <th></th>
         <th></th>
         <th></th>
@@ -32,6 +33,7 @@
       <% else %>
       <td>INACTIVO</td>
       <% end %>
+      <td><%= cliente.medidor.numero %></td>
       <td><%= link_to 'Ver', cliente, class: "btn btn-default" %></td>
       <td><%= link_to 'Editar', edit_cliente_path(cliente), class: "btn btn-primary" %></td>
       <td><%= link_to 'Eliminar', cliente, method: :delete, data: { confirm: '¿Estás seguro?' }, class: "btn btn-danger" %></td>
